RESOLVED FIXED208210
[WinCairo] Fix build after revisions 257357 and 257354
https://bugs.webkit.org/show_bug.cgi?id=208210
Summary [WinCairo] Fix build after revisions 257357 and 257354
Don Olmstead
Reported 2020-02-25 10:47:49 PST
Couple compilation issues cropped up due to our EWS being in a bad state.
Attachments
Patch (2.78 KB, patch)
2020-02-25 10:49 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2020-02-25 10:49:32 PST
Basuke Suzuki
Comment 2 2020-02-25 10:54:03 PST
Comment on attachment 391669 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391669&action=review > Source/WebCore/platform/network/curl/CookieJarDB.cpp:507 > + auto expires = cookie.expires.valueOr(0.0); Looks good to me
WebKit Commit Bot
Comment 3 2020-02-25 11:35:20 PST
Comment on attachment 391669 [details] Patch Clearing flags on attachment: 391669 Committed r257368: <https://trac.webkit.org/changeset/257368>
WebKit Commit Bot
Comment 4 2020-02-25 11:35:22 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-02-25 11:36:15 PST
Note You need to log in before you can comment on or make changes to this bug.