[WinCairo] Fix build after revisions 257357 and 257354 https://bugs.webkit.org/show_bug.cgi?id=208210

Unreviewed build fix.


* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::notifyChange):
* platform/network/curl/CookieJarDB.cpp:
(WebCore::CookieJarDB::setCookie):


Canonical link: https://commits.webkit.org/221141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257368 268f45cc-cd09-0410-ab3c-d52691b4dbfc